tests/ui/traits/const-traits/const-drop-fail.stock.stderr
error[E0277]: the trait bound `NonTrivialDrop: const Destruct` is not satisfied
  --> $DIR/const-drop-fail.rs:27:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `check_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NonTrivialDrop: const Destruct` is not satisfied
  --> $DIR/const-drop-fail.rs:27:23
   |
LL |           const _: () = check($exp);
   |                         ^^^^^^^^^^^
...
LL | / check_all! {
LL | |     NonTrivialDrop,
LL | |     ConstImplWithDropGlue(NonTrivialDrop),
LL | | }
   | |_- in this macro invocation
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `check_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
